# dx_rs

./: .env  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yaml
api/: Cargo.toml  Dockerfile
api/src/: connection.rs  errors.rs  main.rs  nats_streams.rs  routes.rs  schema.rs  state.rs
api/src/auth/: auth.rs  middleware.rs  mod.rs  oauth.rs
api/src/minio_upload/: minio_upload.rs
api/src/nats/: mod.rs  streams.rs
api/src/nats/file_upload/: stream.rs
api/src/nats/publisher/: file_upload.rs
api/src/nats/streams/: mod.rs  streams.rs
api/src/nats/streams/file_upload/: mod.rs
api/src/routes/: mod.rs
api/src/routes/auth/: auth.rs  mod.rs
api/src/routes/todo/: mod.rs  todo.rs
api/src/routes/upload/: mod.rs  upload.rs
api/src/schema/: mod.rs
api/src/schema/file_upload/: schema.rs
api/src/schema/oauth/: mod.rs  schema.rs
api/src/schema/todo/: mod.rs
app/: Cargo.toml  Dioxus.toml  Dockerfile  _Dockerfile
app/assets/styling/: navbar.css  todo.css
app/src/: main.rs  route.rs
app/src/components/: mod.rs
app/src/components/file_upload/: upload.rs
app/src/components/primitives/: mod.rs
app/src/components/results/: doodle.rs
app/src/components/todo/: main.rs  mod.rs
app/src/views/: blog.rs  home.rs  mod.rs  navbar.rs  results.rs  todo.rs
assets/styling/: main.css  results.css
compose/: api.yaml  app.yaml  db.yaml  minio.yaml  nats.yaml  services.yaml
file_processor/: Cargo.toml  Dockerfile
file_processor/src/: errors.rs  main.rs  nats.rs  schema.rs
services/: Cargo.toml  Dockerfile.api  Dockerfile.fastq_service
services/api/: Cargo.toml
services/api/src/: errors.rs  main.rs  state.rs
services/api/src/auth/: auth.rs  middleware.rs
services/api/src/minio_upload/: minio_upload.rs  mod.rs
services/api/src/nats/publisher/: file_upload.rs
services/api/src/routes/auth/: auth.rs  mod.rs
services/api/src/routes/todo/: mod.rs  todo.rs
services/api/src/routes/upload/: mod.rs  upload.rs
services/api/src/schema/file_upload/: mod.rs  schema.rs
services/api/src/schema/todo/: schema.rs
services/app/: Cargo.toml  Dioxus.toml  Dockerfile  Makefile
services/app/assets/styling/: dx-components-theme.css  home.css  login.css  main.css  navbar.css
services/app/src/: main.rs  route.rs
services/app/src/auth/: context.rs  mod.rs  protected.rs  server_fns.rs  types.rs
services/app/src/components/: mod.rs
services/app/src/components/file_upload/: style.css  upload.rs
services/app/src/components/home/: main.rs  mod.rs  style.css
services/app/src/components/results/: doodle.rs  main.rs  mod.rs  style.css
services/app/src/components/todo/: main.rs  mod.rs  types.rs
services/app/src/views/: auth_callback.rs  home.rs  login.rs  mod.rs  navbar.rs  results.rs  todo.rs  upload.rs
services/fastq_service/: Cargo.toml  Dockerfile
services/fastq_service/src/: config.rs  database.rs  errors.rs  handle_message.rs  main.rs  minio.rs  utils.rs
services/shared/: Cargo.toml
services/shared/src/: lib.rs
services/shared/src/database/: connection.rs  errors.rs  mod.rs
services/shared/src/database/schemas/: common.rs  fastq_preprocess.rs  fastq_sample.rs  mod.rs  user.rs
services/shared/src/database/schemas/pipelines/: mod.rs
services/shared/src/database/schemas/pipelines/amplicon/: job.rs  mod.rs  sample.rs
services/shared/src/minio/: connection.rs  download.rs  errors.rs  mod.rs  upload.rs
services/shared/src/nats/: connection.rs  errors.rs  mod.rs
services/shared/src/nats/consumer/: consumer.rs  mod.rs
services/shared/src/nats/schema/: fastq_service.rs  mod.rs
services/shared/src/nats/streams/: config.rs  mod.rs  stream.rs  streams.rs
services/shared/src/nats/streams/file_upload/: mod.rs  stream.rs
services/shared/src/schema/: schema.rs
services/shared/src/utils/: file.rs  macros.rs  mod.rs  time.rs  url.rs
src/: main.rs
src/components/: echo.rs  test_toast.rs
src/components/file_upload/: main.rs  utils.rs
src/components/results/: mod.rs  upload.rs
