[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
surrealdb = { version = "2.3.10"}
uuid = {version = "1.18.1", features = ["v7"]}
axum = {version = "0.8.6", features = ["multipart"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = {version = "*"}
anyhow = {version = "1.0.100"}
thiserror = { version = "2.0.17" }
tokio = {version = "*", features = ["full"]}
simple_logger = {version = "*"}
log = {version = "*"}
tower = {version = "0.5.2"}
tower-http = {version = "0.6.6", features = ["full"]}
minio = {version = "0.3.0"}
chrono = {version = "0.4.42"}
async-nats = {version = "0.44.2"}
reqwest = {version = "0.12.24", features = ["json"]}
oauth2 = {version = "4.4"}
jsonwebtoken = {version = "10.1.0", features = ["rust_crypto"]}