[package]
name = "file_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = {version = "0.44.2"}
futures = {version = "0.3.31"}
tokio = {version = "*", features = ["full"]}
serde = {version = "*", features = ["derive"]}
serde_json = {version = "1.0.145"}
log = {version = "0.4.28"}
simple_logger = {version = "5.1.0"}
fastq_rs = {version = "*"}
regex = {version = "1.12.2"}
minio = {version = "0.3.0"}
thiserror = {version = "2.0.17"}