[workspace]
resolver = "3"
members = ["api", "fastq_service", "shared"]

[workspace.dependencies]
# Database
surrealdb = { version = "2.3.10"}

# Async
futures = {version = "0.3.31"}
tokio = {version = "1.48.0", features = ["full"]}

# Connections
async-nats = {version = "0.44.2"}
minio = {version = "0.3.0"}

# Serializing.
serde = {version = "1.0.228", features = ["derive"]}
serde_json = {version = "1.0.145"}

# Logging.
log = {version = "0.4.28"}
simple_logger = {version = "5.1.0"}

# Error handling.
thiserror = {version = "2.0.17"}

# Misc.
regex = {version = "1.12.2"}
chrono = {version = "0.4.42"}
bytes = {version = "1.10.1"}
