[package]
name = "api"
version = "0.0.1"
edition = "2024"

[dependencies]

uuid = {version = "1.18.1", features = ["v7"]}
axum = {version = "0.8.6", features = ["multipart"]}
anyhow = {version = "1.0.100"}
tower = {version = "0.5.2"}
tower-http = {version = "0.6.6", features = ["full"]}
chrono = {version = "0.4.42"}
reqwest = {version = "0.12.24", features = ["json"]}
oauth2 = {version = "4.4"}
jsonwebtoken = {version = "10.1.0", features = ["rust_crypto"]}

# Package specifics
shared = {path = "../shared", features = ["database", "nats", "minio"]}

# Database
surrealdb = { workspace = true}

# Async
futures = {workspace=true}
tokio = {workspace = true}

# Connections
async-nats = {workspace=true}
minio = {workspace=true}

# Serializing.
serde = {workspace = true}
serde_json = {workspace=true}

# Logging.
log = {workspace=true}
simple_logger = {workspace=true}

# Error handling.
thiserror = {workspace=true}

# Misc.
regex = {workspace=true}
bytes = {workspace=true}