[package]
name = "app"
version = "0.1.0"
authors = ["Oscar Aspelin <oscar.aspelin@gmail.com>"]
edition = "2021"

[dependencies]
shared = {path = "../shared", features = ["utils", "schema"]}

# Dioxus itself.
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1" }
tracing = { version = "0.1", features = ["std"] }

# Serialization.
serde = {workspace = true}
serde_json = {workspace = true}

# Async + requests
tokio = {workspace = true, optional = true}
reqwest = {version = "0.12.24", features = ["json", "stream", "multipart"]}

# Misc
uuid = {version = "1.18.1", features = ["v7", "js"]} # "js" feature required for web-assembly.
strum = {workspace = true} # Enum manipulation.

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:tokio"]
