[package]
name = "app"
version = "0.1.0"
authors = ["Oscar Aspelin <oscar.aspelin@gmail.com>"]
edition = "2021"

[dependencies]
shared = {path = "../shared", features = ["utils", "schema"]}

# Dioxus itself.
dioxus = { version = "0.7.2", features = ["router", "fullstack"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1" }
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3"}

# Serialization.
serde = {workspace = true}
serde_json = {workspace = true}

# Async + requests
tokio = {workspace = true, optional = true}
reqwest = {version = "0.12.24", features = ["json", "stream", "multipart"]}

# Misc
uuid = {version = "1.18.1", features = ["v7", "js"]}
strum = {workspace = true}
dotenv = {version = "*"}

# Auth (server-side only)
oauth2 = { version = "4.4", optional = true }
jsonwebtoken = { version = "9", optional = true }
surrealdb = { workspace = true, optional = true }

# Web-specific (for localStorage access)
web-sys = { version = "0.3", features = ["Window", "Storage"], optional = true }

[features]
default = ["desktop"]
web = ["dioxus/web", "dep:web-sys"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:tokio", "dep:oauth2", "dep:jsonwebtoken", "dep:surrealdb"]
