[package]
name = "fastq_service"
version = "0.0.1"
edition = "2024"

[dependencies]
# Package specifics
fastq_rs = {version = "*"}
shared = {path = "../shared"}

# Async
futures = {workspace=true}
tokio = {workspace = true}

# Connections
async-nats = {workspace=true}
minio = {workspace=true}

# Serializing.
serde = {workspace = true}
serde_json = {workspace=true}

# Logging.
log = {workspace=true}
simple_logger = {workspace=true}

# Error handling.
thiserror = {workspace=true}

# Misc.
regex = {workspace=true}
bytes = {workspace=true}